tests/baselines/reference/classWithDuplicateIdentifier.symbols
=== tests/cases/compiler/classWithDuplicateIdentifier.ts ===
class C {
>C : Symbol(C, Decl(classWithDuplicateIdentifier.ts, 0, 0))

    a(): number { return 0; } // error: duplicate identifier
>a : Symbol(C.a, Decl(classWithDuplicateIdentifier.ts, 0, 9), Decl(classWithDuplicateIdentifier.ts, 1, 29))

    a: number;
>a : Symbol(C.a, Decl(classWithDuplicateIdentifier.ts, 0, 9), Decl(classWithDuplicateIdentifier.ts, 1, 29))
}
class K {
>K : Symbol(K, Decl(classWithDuplicateIdentifier.ts, 3, 1))

    b: number; // error: duplicate identifier
>b : Symbol(K.b, Decl(classWithDuplicateIdentifier.ts, 4, 9))

    b(): number { return 0; }
>b : Symbol(K.b, Decl(classWithDuplicateIdentifier.ts, 5, 14))
}
class D {
>D : Symbol(D, Decl(classWithDuplicateIdentifier.ts, 7, 1))

    c: number;
>c : Symbol(D.c, Decl(classWithDuplicateIdentifier.ts, 8, 9), Decl(classWithDuplicateIdentifier.ts, 9, 14))

    c: string;
>c : Symbol(D.c, Decl(classWithDuplicateIdentifier.ts, 8, 9), Decl(classWithDuplicateIdentifier.ts, 9, 14))
}

